--- a/DistSysAcwClient/DistSysAcwClient.csproj
+++ b/DistSysAcwClient/DistSysAcwClient.csproj
@@ -11,5 +11,12 @@
     <None Remove="Auth\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 
 </Project>
