--- a/DistSysAcwClient/DistSysAcwClient.csproj
+++ b/DistSysAcwClient/DistSysAcwClient.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Net.Http.WinHttpHandler" Version="9.0.4" />
   </ItemGroup>
 
 
